// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table => Ui BodyColumn 1`] = `
.c0 {
  font-size: 14px;
}

<td
  className="c0"
/>
`;

exports[`Table => Ui HeaderColumn 1`] = `
.c0 {
  font-size: 12px;
  text-align: left;
}

<th
  className="c0"
/>
`;

exports[`Table => Ui Table 1`] = `
.c0 {
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

<table
  className="c0"
/>
`;

exports[`Table => Ui TableGroup 1`] = `
.c0 {
  height: 60px;
  border-bottom: 2px solid;
  padding: 0 10px;
}

<tr
  className="c0"
/>
`;
